// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BranchOpt 1`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x2)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 2,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "sw x1, lab(x3)",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 2,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 3,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 4,
    "dest": 8,
    "ins": "sub x4, x4, x5",
    "n_de": 5,
    "n_ee": 6,
    "n_fe": 2,
    "n_me": 7,
    "n_pc": 3,
    "n_we": 8,
    "pipe": "--ffFDEMW",
    "s1": 4,
    "s2": 5,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 11,
    "ins": "add x2, x2, x4",
    "n_de": 6,
    "n_ee": 9,
    "n_fe": 5,
    "n_me": 10,
    "n_pc": 6,
    "n_we": 11,
    "pipe": "-----FddDEMW",
    "s1": 2,
    "s2": 4,
    "src1": 0,
    "src2": 8,
  },
  Object {
    "d": 3,
    "dest": 12,
    "ins": "add x3, x3, x4",
    "n_de": 9,
    "n_ee": 10,
    "n_fe": 6,
    "n_me": 11,
    "n_pc": 7,
    "n_we": 12,
    "pipe": "------ffFDEMW",
    "s1": 3,
    "s2": 4,
    "src1": 0,
    "src2": 8,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x4, x6, loop",
    "n_de": 10,
    "n_ee": 11,
    "n_fe": 9,
    "n_me": 12,
    "n_pc": 11,
    "n_we": 13,
    "pipe": "---------FDEMW",
    "s1": 4,
    "s2": 6,
    "src1": 8,
    "src2": 0,
  },
  Object {
    "d": 1,
    "dest": 15,
    "ins": "lw x1, lab(x2)",
    "n_de": 12,
    "n_ee": 13,
    "n_fe": 10,
    "n_me": 14,
    "n_pc": 11,
    "n_we": 15,
    "pipe": "----------fFDEMW",
    "s1": 2,
    "s2": 0,
    "src1": 11,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "sw x1, lab(x3)",
    "n_de": 13,
    "n_ee": 16,
    "n_fe": 12,
    "n_me": 17,
    "n_pc": 13,
    "n_we": 18,
    "pipe": "------------FddDEMW",
    "s1": 1,
    "s2": 3,
    "src1": 15,
    "src2": 12,
  },
  Object {
    "d": 4,
    "dest": 19,
    "ins": "sub x4, x4, x5",
    "n_de": 16,
    "n_ee": 17,
    "n_fe": 13,
    "n_me": 18,
    "n_pc": 14,
    "n_we": 19,
    "pipe": "-------------ffFDEMW",
    "s1": 4,
    "s2": 5,
    "src1": 8,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 22,
    "ins": "add x2, x2, x4",
    "n_de": 17,
    "n_ee": 20,
    "n_fe": 16,
    "n_me": 21,
    "n_pc": 17,
    "n_we": 22,
    "pipe": "----------------FddDEMW",
    "s1": 2,
    "s2": 4,
    "src1": 11,
    "src2": 19,
  },
  Object {
    "d": 3,
    "dest": 23,
    "ins": "add x3, x3, x4",
    "n_de": 20,
    "n_ee": 21,
    "n_fe": 17,
    "n_me": 22,
    "n_pc": 18,
    "n_we": 23,
    "pipe": "-----------------ffFDEMW",
    "s1": 3,
    "s2": 4,
    "src1": 12,
    "src2": 19,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x4, x6, loop",
    "n_de": 21,
    "n_ee": 22,
    "n_fe": 20,
    "n_me": 23,
    "n_pc": 22,
    "n_we": 24,
    "pipe": "--------------------FDEMW",
    "s1": 4,
    "s2": 6,
    "src1": 19,
    "src2": 0,
  },
]
`;

exports[`BranchOpt 2`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "add x1, x10, x12",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 12,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x1, x2, loop",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 5,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 9,
    "ins": "add x3, x1, x2",
    "n_de": 6,
    "n_ee": 7,
    "n_fe": 2,
    "n_me": 8,
    "n_pc": 3,
    "n_we": 9,
    "pipe": "--fffFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
]
`;

exports[`BranchOpt 3`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x3)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x1, x5, loop",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 5,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 5,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 9,
    "ins": "lw x2, lab(x3)",
    "n_de": 6,
    "n_ee": 7,
    "n_fe": 2,
    "n_me": 8,
    "n_pc": 3,
    "n_we": 9,
    "pipe": "--fffFDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 10,
    "ins": "add x3, x3, x3",
    "n_de": 7,
    "n_ee": 8,
    "n_fe": 6,
    "n_me": 9,
    "n_pc": 7,
    "n_we": 10,
    "pipe": "------FDEMW",
    "s1": 3,
    "s2": 3,
    "src1": 0,
    "src2": 0,
  },
]
`;

exports[`Fw 1`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x10)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 5,
    "ins": "sub x2, x1, x12",
    "n_de": 2,
    "n_ee": 4,
    "n_fe": 1,
    "n_me": 5,
    "n_pc": 2,
    "n_we": 6,
    "pipe": "-FdDEMW",
    "s1": 1,
    "s2": 12,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 13,
    "dest": 6,
    "ins": "add x13, x1, x2",
    "n_de": 4,
    "n_ee": 5,
    "n_fe": 2,
    "n_me": 6,
    "n_pc": 3,
    "n_we": 7,
    "pipe": "--fFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 5,
  },
]
`;

exports[`Fw 2`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x10)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "sw x2, lab(x11)",
    "n_de": 2,
    "n_ee": 3,
    "n_fe": 1,
    "n_me": 4,
    "n_pc": 2,
    "n_we": 5,
    "pipe": "-FDEMW",
    "s1": 2,
    "s2": 11,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 13,
    "dest": 5,
    "ins": "add x13, x1, x2",
    "n_de": 3,
    "n_ee": 4,
    "n_fe": 2,
    "n_me": 5,
    "n_pc": 3,
    "n_we": 6,
    "pipe": "--FDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
]
`;

exports[`Fw 3`] = `
Array [
  Object {
    "d": 1,
    "dest": 3,
    "ins": "add x1, x10, x12",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 12,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x1, x2, loop",
    "n_de": 2,
    "n_ee": 3,
    "n_fe": 1,
    "n_me": 4,
    "n_pc": 5,
    "n_we": 5,
    "pipe": "-FDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 3,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 8,
    "ins": "add x3, x1, x2",
    "n_de": 6,
    "n_ee": 7,
    "n_fe": 2,
    "n_me": 8,
    "n_pc": 3,
    "n_we": 9,
    "pipe": "--fffFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 3,
    "src2": 0,
  },
]
`;

exports[`Fw BranchOpt 1`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x2)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 2,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "sw x1, lab(x3)",
    "n_de": 2,
    "n_ee": 4,
    "n_fe": 1,
    "n_me": 5,
    "n_pc": 2,
    "n_we": 6,
    "pipe": "-FdDEMW",
    "s1": 1,
    "s2": 3,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 4,
    "dest": 6,
    "ins": "sub x4, x4, x5",
    "n_de": 4,
    "n_ee": 5,
    "n_fe": 2,
    "n_me": 6,
    "n_pc": 3,
    "n_we": 7,
    "pipe": "--fFDEMW",
    "s1": 4,
    "s2": 5,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 7,
    "ins": "add x2, x2, x4",
    "n_de": 5,
    "n_ee": 6,
    "n_fe": 4,
    "n_me": 7,
    "n_pc": 5,
    "n_we": 8,
    "pipe": "----FDEMW",
    "s1": 2,
    "s2": 4,
    "src1": 0,
    "src2": 6,
  },
  Object {
    "d": 3,
    "dest": 8,
    "ins": "add x3, x3, x4",
    "n_de": 6,
    "n_ee": 7,
    "n_fe": 5,
    "n_me": 8,
    "n_pc": 6,
    "n_we": 9,
    "pipe": "-----FDEMW",
    "s1": 3,
    "s2": 4,
    "src1": 0,
    "src2": 6,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x4, x6, loop",
    "n_de": 7,
    "n_ee": 8,
    "n_fe": 6,
    "n_me": 9,
    "n_pc": 8,
    "n_we": 10,
    "pipe": "------FDEMW",
    "s1": 4,
    "s2": 6,
    "src1": 6,
    "src2": 0,
  },
]
`;

exports[`Fw BranchOpt 2`] = `
Array [
  Object {
    "d": 1,
    "dest": 3,
    "ins": "add x1, x10, x12",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 12,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x1, x2, loop",
    "n_de": 2,
    "n_ee": 4,
    "n_fe": 1,
    "n_me": 5,
    "n_pc": 4,
    "n_we": 6,
    "pipe": "-FdDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 3,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 7,
    "ins": "add x3, x1, x2",
    "n_de": 5,
    "n_ee": 6,
    "n_fe": 2,
    "n_me": 7,
    "n_pc": 3,
    "n_we": 8,
    "pipe": "--ffFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 3,
    "src2": 0,
  },
]
`;

exports[`Fw BranchOpt 3`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x3)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 5,
    "ins": "sub x2, x1, x10",
    "n_de": 2,
    "n_ee": 4,
    "n_fe": 1,
    "n_me": 5,
    "n_pc": 2,
    "n_we": 6,
    "pipe": "-FdDEMW",
    "s1": 1,
    "s2": 10,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x5, loop",
    "n_de": 4,
    "n_ee": 6,
    "n_fe": 2,
    "n_me": 7,
    "n_pc": 6,
    "n_we": 8,
    "pipe": "--fFdDEMW",
    "s1": 2,
    "s2": 5,
    "src1": 5,
    "src2": 0,
  },
  Object {
    "d": 1,
    "dest": 10,
    "ins": "lw x1, lab(x3)",
    "n_de": 7,
    "n_ee": 8,
    "n_fe": 4,
    "n_me": 9,
    "n_pc": 5,
    "n_we": 10,
    "pipe": "----ffFDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 11,
    "ins": "sub x2, x1, x10",
    "n_de": 8,
    "n_ee": 10,
    "n_fe": 7,
    "n_me": 11,
    "n_pc": 8,
    "n_we": 12,
    "pipe": "-------FdDEMW",
    "s1": 1,
    "s2": 10,
    "src1": 10,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x5, loop",
    "n_de": 10,
    "n_ee": 12,
    "n_fe": 8,
    "n_me": 13,
    "n_pc": 12,
    "n_we": 14,
    "pipe": "--------fFdDEMW",
    "s1": 2,
    "s2": 5,
    "src1": 11,
    "src2": 0,
  },
]
`;

exports[`Fw BranchOpt 4`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x3)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x1, x5, loop",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 5,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 5,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 9,
    "ins": "lw x2, lab(x3)",
    "n_de": 6,
    "n_ee": 7,
    "n_fe": 2,
    "n_me": 8,
    "n_pc": 3,
    "n_we": 9,
    "pipe": "--fffFDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 9,
    "ins": "add x3, x3, x3",
    "n_de": 7,
    "n_ee": 8,
    "n_fe": 6,
    "n_me": 9,
    "n_pc": 7,
    "n_we": 10,
    "pipe": "------FDEMW",
    "s1": 3,
    "s2": 3,
    "src1": 0,
    "src2": 0,
  },
]
`;

exports[`No fw 1`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x10)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 7,
    "ins": "sub x2, x1, x12",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 2,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 12,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 13,
    "dest": 10,
    "ins": "add x13, x1, x2",
    "n_de": 5,
    "n_ee": 8,
    "n_fe": 2,
    "n_me": 9,
    "n_pc": 3,
    "n_we": 10,
    "pipe": "--ffFddDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 7,
  },
]
`;

exports[`No fw 2`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "add x1, x10, x12",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 12,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 5,
    "ins": "sub x3, x4, x12",
    "n_de": 2,
    "n_ee": 3,
    "n_fe": 1,
    "n_me": 4,
    "n_pc": 2,
    "n_we": 5,
    "pipe": "-FDEMW",
    "s1": 4,
    "s2": 12,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 13,
    "dest": 7,
    "ins": "add x13, x1, x2",
    "n_de": 3,
    "n_ee": 5,
    "n_fe": 2,
    "n_me": 6,
    "n_pc": 3,
    "n_we": 7,
    "pipe": "--FdDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
]
`;

exports[`No fw 3`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "add x1, x10, x12",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 12,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x1, x2, loop",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 7,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 11,
    "ins": "add x3, x1, x2",
    "n_de": 8,
    "n_ee": 9,
    "n_fe": 2,
    "n_me": 10,
    "n_pc": 3,
    "n_we": 11,
    "pipe": "--fffffFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
]
`;

exports[`No fw 4`] = `
Array [
  Object {
    "d": 2,
    "dest": 4,
    "ins": "add x2, x9, x10",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 9,
    "s2": 10,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x1, loop",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 7,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 2,
    "s2": 1,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 11,
    "ins": "add x2, x9, x10",
    "n_de": 8,
    "n_ee": 9,
    "n_fe": 2,
    "n_me": 10,
    "n_pc": 3,
    "n_we": 11,
    "pipe": "--fffffFDEMW",
    "s1": 9,
    "s2": 10,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x1, loop",
    "n_de": 9,
    "n_ee": 12,
    "n_fe": 8,
    "n_me": 13,
    "n_pc": 14,
    "n_we": 14,
    "pipe": "--------FddDEMW",
    "s1": 2,
    "s2": 1,
    "src1": 11,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 18,
    "ins": "add x2, x9, x10",
    "n_de": 15,
    "n_ee": 16,
    "n_fe": 9,
    "n_me": 17,
    "n_pc": 10,
    "n_we": 18,
    "pipe": "---------fffffFDEMW",
    "s1": 9,
    "s2": 10,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x1, loop",
    "n_de": 16,
    "n_ee": 19,
    "n_fe": 15,
    "n_me": 20,
    "n_pc": 21,
    "n_we": 21,
    "pipe": "---------------FddDEMW",
    "s1": 2,
    "s2": 1,
    "src1": 18,
    "src2": 0,
  },
]
`;

exports[`No fw 5`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x3)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 7,
    "ins": "sub x2, x1, x10",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 2,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 10,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x5, loop",
    "n_de": 5,
    "n_ee": 8,
    "n_fe": 2,
    "n_me": 9,
    "n_pc": 10,
    "n_we": 10,
    "pipe": "--ffFddDEMW",
    "s1": 2,
    "s2": 5,
    "src1": 7,
    "src2": 0,
  },
  Object {
    "d": 1,
    "dest": 14,
    "ins": "lw x1, lab(x3)",
    "n_de": 11,
    "n_ee": 12,
    "n_fe": 5,
    "n_me": 13,
    "n_pc": 6,
    "n_we": 14,
    "pipe": "-----fffffFDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 17,
    "ins": "sub x2, x1, x10",
    "n_de": 12,
    "n_ee": 15,
    "n_fe": 11,
    "n_me": 16,
    "n_pc": 12,
    "n_we": 17,
    "pipe": "-----------FddDEMW",
    "s1": 1,
    "s2": 10,
    "src1": 14,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x5, loop",
    "n_de": 15,
    "n_ee": 18,
    "n_fe": 12,
    "n_me": 19,
    "n_pc": 20,
    "n_we": 20,
    "pipe": "------------ffFddDEMW",
    "s1": 2,
    "s2": 5,
    "src1": 17,
    "src2": 0,
  },
]
`;
